KAS-4432 fix prevent rdfa region nodes from merging with deletes

--- a/app/styles/addon-overrides/_ember-rdfa-editor.scss
+++ b/app/styles/addon-overrides/_ember-rdfa-editor.scss
@@ -206,3 +206,10 @@ $say-editor-border-radius: $au-input-border-radius;
     padding: 3rem 4rem;
   }
 }
+
+// selecting block nodes in rdfa-editor are more visual
+.ProseMirror-selectednode {
+  background-color: var(--au-blue-200);
+  outline: 2px solid var(--au-blue-500);
+  color: var(--au-black);
+}
