Reworked vp code and made it possible to submit any agendaitem

--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -89,6 +89,7 @@
     @onClose={{this.onSendToVp}}
     @onCancel={{set this "showVPModal" false}}
     @agendaitem={{@agendaitem}}
+    @meeting={{@meeting}}
     @definitieveGoedkeuringSubcase={{this.subcase}}
   />
 {{/if}}
