--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -30,6 +30,7 @@
         @agendaActivity={{this.agendaActivity}}
         @currentAgenda={{this.agenda}}
         @subcase={{this.subcase}}
+        @meeting={{this.meeting}}
         @reverseSortedAgendas={{this.reverseSortedAgendas}}
         @onDeleteAgendaitem={{this.reassignNumbersAndNavigateToNeighbouringAgendaitem}}
         @onSendToVp={{this.reloadParliamentFlow}}
