add uption to disable rows in a KDataTable

--- a/app/components/k-data-table.hbs
+++ b/app/components/k-data-table.hbs
@@ -7,6 +7,7 @@
    list=@list
    loading=@loading
    content=@content
+   shouldDisableRow=@shouldDisableRow
    onClickRow=@onClickRow) as |Table|}}
   {{#let (and @asideVisible (has-block "aside"))
      as |showAside|}}
