--- a/app/templates/signatures/ongoing-decisions.hbs
+++ b/app/templates/signatures/ongoing-decisions.hbs
@@ -37,12 +37,14 @@
       @totalNumberOfItems={{@model.meta.count}}
       @onChangeSize={{fn (mut this.size)}}
       @onChangePage={{fn (mut this.page)}}
-      @onClickRow={{this.navigateToSignFlow}}
+      @onClickRow={{this.onClickRow}}
+      @shouldDisableRow={{this.isRowDisabled}}
       >
       <:header>
         <th class="auk-table__col--6">{{t "document-name"}}</th>
         <th class="auk-table__col--1">{{t "document-type"}}</th>
         <th class="auk-table__col--2">{{t "meeting-date"}}</th>
+        <th class="auk-table__col--2">{{t "started-by"}}</th>
         <th class="auk-table__col--2">{{t "status"}}</th>
         <th class="auk-table__col--1"></th>
         </:header>
@@ -76,10 +78,17 @@
             {{date (await (this.getMeetingDate signFlow))}}
           </td>
           <td>
+            {{signFlow.creator.fullName}}
+          </td>
+          <td>
             <SignaturePill
               @piece={{signMarkingActivity.piece}}
               @signMarkingActivity={{signMarkingActivity}}
-              @isClickable={{false}}
+              @isClickable={{
+                or 
+                  (not (await (this.isRowDisabled signFlow))) 
+                  signFlow.isSigned
+                }}
             />
           </td>
         {{/let}}
