--- a/app/components/documents/linked-document-list.hbs
+++ b/app/components/documents/linked-document-list.hbs
@@ -1,6 +1,6 @@
 <div {{did-update (perform this.loadData) @linkedPieces}}>
   {{#if this.loadData.isRunning}}
-    <WebComponents::VlLoader @text={{t "documents-loading-text"}} />
+    <Auk::Loader @message={{t "documents-loading-text"}} />
   {{else}}
     {{#each this.sortedDocumentHistories as |history|}}
       <Documents::LinkedDocumentLink
