KAS-4476 Replace vl-loader and auk-loader instances with au-loader (part 3)

--- a/app/components/access-level-pill.hbs
+++ b/app/components/access-level-pill.hbs
@@ -1,5 +1,5 @@
 {{#if this.isLoading}}
-  <div class="auk-loader" role="alert" aria-busy="true"></div>
+  <Auk::Loader />
 {{else}}
   {{#if (not this.isEditing)}}
     {{#if (not this.canEdit)}}
