--- a/app/components/agenda/agendaitem/send-to-vp-modal.hbs
+++ b/app/components/agenda/agendaitem/send-to-vp-modal.hbs
@@ -10,7 +10,7 @@
   <:title>{{t "check-case"}}</:title>
   <:body>
     {{#if this.loadData.isRunning}}
-      <AuLoader />
+      <Auk::Loader />
     {{else}}
       <AuContent>
         {{#if this.showPieces}}
