--- a/app/components/signatures/status-filter.hbs
+++ b/app/components/signatures/status-filter.hbs
@@ -1,5 +1,5 @@
 {{#if this.loadStatuses.isRunning}}
-  <AuLoader @padding="small" />
+  <Auk::Loader />
 {{else}}
   <Auk::CheckboxTree
     @label={{t "th-select-all"}}
