--- a/app/components/utils/document-type-selector.hbs
+++ b/app/components/utils/document-type-selector.hbs
@@ -1,7 +1,7 @@
 {{#if this.isLoading}}
   <div class="auk-u-text-muted">
     {{t "please-be-patient"}}
-    <div class="auk-loader" role="alert" aria-busy="true"></div>
+    <Auk::Loader />
   </div>
 {{else}}
   <PowerSelect
