--- a/app/components/utils/formally-ok-selector.hbs
+++ b/app/components/utils/formally-ok-selector.hbs
@@ -2,7 +2,7 @@
   {{#if this.onChange.isRunning}}
     <div class="auk-u-text-muted">
       {{t "please-be-patient"}}
-      <div class="auk-loader" role="alert" aria-busy="true"></div>
+      <Auk::Loader />
     </div>
   {{/if}}
   <PowerSelect
