--- a/app/components/utils/loadable-content.hbs
+++ b/app/components/utils/loadable-content.hbs
@@ -13,7 +13,7 @@
   {{/if}}
   {{#if @isLoading}}
     <div class="au-u-flex au-u-flex--column au-u-flex--center au-u-flex--vertical-center au-u-text-center">
-      <AuLoader @padding="small" @disableMessage={{true}} />
+      <Auk::Loader />
     </div>
   {{/if}}
 </div>
