--- a/app/components/web-components/vl-alert.hbs
+++ b/app/components/web-components/vl-alert.hbs
@@ -6,7 +6,7 @@
 >
   {{#if (eq @type "loading")}}
     <div class="vl-alert__loader">
-      <div class="auk-loader" role="alert" aria-busy="true"></div>
+      <Auk::Loader />
     </div>
   {{else}}
     <div class="vl-alert__icon">
