--- a/app/components/web-components/vl-loader.hbs
+++ b/app/components/web-components/vl-loader.hbs
@@ -1,5 +1,5 @@
 <div data-test-vl-loader class="auk-loader-wrapper auk-loader-wrapper--small auk-u-maximize-width auk-u-maximize-height">
-  <div class="auk-loader" role="alert" aria-busy="true"></div>
+  <Auk::Loader />
   {{#if (not this.text)}}
     <p>
       {{t "loading-text"}}
