--- a/app/templates/document.hbs
+++ b/app/templates/document.hbs
@@ -6,7 +6,7 @@
     @padding="none"
   >
     <:title>
-      <AuLoader @padding="small"/>
+      <Auk::Loader />
     </:title>
     <:body>
       <WebComponents::LoadingPage />
