--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -71,7 +71,7 @@
       {{/if}}
     </AuDropdown>
   {{else}}
-    <div class="auk-loader" role="alert" aria-busy="true"></div>
+    <Auk::Loader />
   {{/if}}
 {{/if}}
 <ConfirmationModal
