--- a/app/components/documents/document-version-history-item.hbs
+++ b/app/components/documents/document-version-history-item.hbs
@@ -1,7 +1,7 @@
 <div class="vlc-document-card-item" data-test-vl-document-piece>
   <div class="vlc-document-card-item__title">
     {{#if this.loadFiles.isRunning}}
-      <AuLoader @padding="small" />
+      <Auk::Loader />
     {{else if @piece.file}}
       <LinkTo @route="document" @model={{@piece.id}}
         class="auk-h4 auk-u-m-0 auk-u-mr-4 vlc-document-card-item__title-link"
