--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -1,5 +1,5 @@
 {{#if this.data.isRunning}}
-  <div class="auk-loader" role="alert" aria-busy="true"></div>
+  <Auk::Loader />
 {{else}}
   {{#if this.data.value.signingHubUrl}}
     <AuPill
