--- a/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
@@ -44,7 +44,7 @@
               class="auk-key-value-item__value"
             >
               {{#if this.loadAgendaData.isRunning}}
-                  <div class="auk-loader" role="alert" aria-busy="true"></div>
+                  <Auk::Loader />
               {{else if this.modelsOfMeetings}}
                 {{#each this.modelsOfMeetings as |models|}}
                   {{#let models.[0] as |meeting|}}
@@ -84,7 +84,7 @@
             </div>
             <div class="auk-key-value-item__value">
               {{#if this.loadAgendaData.isRunning}}
-                <div class="auk-loader" role="alert" aria-busy="true"></div>
+                <Auk::Loader />
               {{else if this.modelsOfMeetings}}
                 {{#each this.modelsOfMeetings as |models| }}
                   {{#let models.[0] models.[1] models.[2] as |meeting agenda agendaitem|}}
