--- a/app/components/vp/sent-to-vp-modal.hbs
+++ b/app/components/vp/sent-to-vp-modal.hbs
@@ -9,7 +9,7 @@
   <:body>
     <AuContent>
       {{#if this.subcaseWithPieces.isLoading}}
-        <AuLoader />
+        <Auk::Loader />
       {{else if this.subcaseWithPieces.value}}
         <p>{{t "the-following-things-were-sent"}}:</p>
         <ul class="au-u-margin-top">
