KAS-4476 Replace vl-loader and auk-loader instances with au-loader (part 4)

--- a/app/components/news-item/table-row.hbs
+++ b/app/components/news-item/table-row.hbs
@@ -82,7 +82,8 @@
         </AuButton>
       {{/if}}
       {{#if this.loadNotaOrVisienota.isRunning}}
-        <div class="auk-loader" role="alert" aria-busy="true">
+        <div class="au-c-loader au-c-loader--small">
+          <div class="au-c-loader__animation" aria-hidden="true"></div>
           <EmberTooltip @side="bottom" @tooltipClass="auk-tooltip">
             {{t "nota-loading-text"}}
           </EmberTooltip>
