--- a/app/components/news-item/edit-panel.hbs
+++ b/app/components/news-item/edit-panel.hbs
@@ -11,7 +11,8 @@
       <Toolbar.Group @position="right" as |Group|>
         <Group.Item>
           {{#if this.loadNotaOrVisienota.isRunning}}
-            <div class="auk-loader" role="alert" aria-busy="true">
+            <div class="au-c-loader au-c-loader--small">
+              <div class="au-c-loader__animation" aria-hidden="true"></div>
               <EmberTooltip @side="bottom" @tooltipClass="auk-tooltip">
                 {{t "nota-loading-text"}}
               </EmberTooltip>
