KAS-4490: added newSubcaseForm and feature flag for new functionality to create subcases

--- a/app/components/cases/cases-header.hbs
+++ b/app/components/cases/cases-header.hbs
@@ -18,6 +18,16 @@
             >
               {{t "add-case"}}
             </AuButton>
+            {{#if this.enableNewCaseCreation}}
+              <AuButton
+                data-test-cases-header-add-case
+                @skin="primary"
+                @icon="plus"
+                {{on "click" this.toggleNewIsOpenNewCaseModal}}
+              >
+                {{t "add-case-new"}}
+              </AuButton>
+            {{/if}}
           {{/if}}
         </Group.Item>
       </Toolbar.Group>
