--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -49,6 +49,7 @@
 // CUSTOM STYLING
 @import 'custom-application/pdf-viewer';
 @import 'custom-application/uploaded-document';
+@import 'custom-application/form';
 
 // AUK COMPONENTS
 @import 'auk-components'; // sourced from "au-kaleidos-css" npm package
