Disabled save button when saveCase is running

--- a/app/components/cases/new-subcase-form.hbs
+++ b/app/components/cases/new-subcase-form.hbs
@@ -179,6 +179,7 @@
       </AuLink>
       <AuButton
         @skin="primary"
+        @disabled={{this.saveCase.isRunning}}
         {{on "click" this.saveCase}}
       >
         {{t "new-subcase"}}
