KAS-4485 Replace specific styling with generic classes from ember-appuniversum

--- a/app/components/cases/new-subcase-form.hbs
+++ b/app/components/cases/new-subcase-form.hbs
@@ -30,7 +30,8 @@
 
 <div class="auk-scroll-wrapper">
   <div class="auk-scroll-wrapper__body">
-      <div class="au-c-case-form">
+    <div class="au-o-region">
+      <div class="au-o-layout">
         <Auk::Panel class="auk-u-mb-2">
           <Auk::Panel::Header
             @size="auto"
@@ -49,123 +50,124 @@
               @isLoading={{this.areLoadingTasksRunning}}
               @reserveSpace={{true}}
             >
-            <div class="au-c-form">
-              <div class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
+              <div class="au-c-form">
+                <div class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
+                  <AuFormRow>
+                    <AuFieldset as |Fieldset|>
+                      <Fieldset.legend>{{t "subcase-type"}}</Fieldset.legend>
+                      <Fieldset.content>
+                        <AuRadioGroup
+                          @alignment="inline"
+                          @selected={{this.agendaItemType}}
+                          @onChange={{this.onChangeAgendaItemType}}
+                          as |Group|
+                        >
+                          {{#each this.agendaItemTypes as |type|}}
+                            <Group.Radio
+                              @value={{type}}
+                            >
+                              {{type.label}}
+                            </Group.Radio>
+                          {{/each}}
+                        </AuRadioGroup>
+                      </Fieldset.content>
+                    </AuFieldset>
+                  </AuFormRow>
+                  <AuFormRow>
+                  <AuButton
+                    @skin="secondary"
+                    @icon="copy-paste"
+                    {{on "click" (fn this.saveCase true)}}
+                    @disabled={{this.saveCase.isRunning}}
+                  >
+                    {{t "clone-previous-subcase"}}
+                  </AuButton>
+                  </AuFormRow>
+                </div>
                 <AuFormRow>
-                  <AuFieldset as |Fieldset|>
-                    <Fieldset.legend>{{t "subcase-type"}}</Fieldset.legend>
-                    <Fieldset.content>
-                      <AuRadioGroup
-                        @alignment="inline"
-                        @selected={{this.agendaItemType}}
-                        @onChange={{this.onChangeAgendaItemType}}
-                        as |Group|
-                      >
-                        {{#each this.agendaItemTypes as |type|}}
-                          <Group.Radio
-                            @value={{type}}
-                          >
-                            {{type.label}}
-                          </Group.Radio>
-                        {{/each}}
-                      </AuRadioGroup>
-                    </Fieldset.content>
-                  </AuFieldset>
+                  <Auk::Label for="subcase-confidential">{{t "limited-access"}}</Auk::Label>
+                  <AuToggleSwitch
+                    id="subcase-confidential"
+                    @onChange={{fn (mut this.confidential)}}
+                  />
                 </AuFormRow>
                 <AuFormRow>
-                <AuButton
-                  @skin="secondary"
-                  @icon="copy-paste"
-                  {{on "click" (fn this.saveCase true)}}
-                  @disabled={{this.saveCase.isRunning}}
-                >
-                  {{t "clone-previous-subcase"}}
-                </AuButton>
+                  <Auk::Label id="name-subcase">{{t "name-subcase"}}</Auk::Label>
+                  <Textarea
+                    aria-labelledby="name-subcase"
+                    rows="2"
+                    class="auk-textarea"
+                    @value={{mut this.shortTitle}}
+                  />
+                </AuFormRow>
+                <AuFormRow>
+                  <Auk::Label id="title-subcase">{{t "title-subcase"}}</Auk::Label>
+                  <Textarea
+                    aria-labelledby="name-subcase"
+                    rows="4"
+                    class="auk-textarea"
+                    @value={{mut this.title}}
+                  />
+                </AuFormRow>
+                <AuFormRow>
+                  <Auk::Label>{{t "subcase-type-dropdown"}}</Auk::Label>
+                  <Utils::ModelSelector
+                    @modelName="subcase-type"
+                    @searchField="label"
+                    @sortField="label"
+                    @displayField="label"
+                    @selected={{this.subcaseType}}
+                    @onChange={{this.selectSubcaseType}}
+                  />
+                </AuFormRow>
+                <AuFormRow>
+                  <Auk::Label>{{t "subcase-name"}}</Auk::Label>
+                  <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex-gap--small au-u-maximize-width">
+                    {{#if (not this.isEditing)}}
+                      <Utils::ModelSelector
+                        class="auk-u-maximize-width"
+                        @modelName="shortcut"
+                        @searchField="label"
+                        @sortField="label"
+                        @filter={{this.filter}}
+                        @selected={{this.selectedShortcut}}
+                        @onChange={{this.selectSubcaseName}}
+                      as |model|>
+                        {{capitalize model.label}}
+                      </Utils::ModelSelector>
+                      <AuButton
+                        @skin="naked"
+                        @icon="pencil"
+                        @hideText={{true}}
+                        {{on "click" this.toggleIsEditing}}
+                      >
+                        {{t "edit"}}
+                      </AuButton>
+                    {{else}}
+                      <AuInput
+                        @width="block"
+                        @value={{this.subcaseName}}
+                        id="subcaseNameId"
+                      />
+                      <AuButton
+                        @skin="naked"
+                        @icon="x"
+                        @hideText={{true}}
+                        {{on "click" this.toggleIsEditing}}
+                      >
+                        {{t "cancel"}}
+                      </AuButton>
+                    {{/if}}
+                  </div>
                 </AuFormRow>
               </div>
-              <AuFormRow>
-                <Auk::Label for="subcase-confidential">{{t "limited-access"}}</Auk::Label>
-                <AuToggleSwitch
-                  id="subcase-confidential"
-                  @onChange={{fn (mut this.confidential)}}
-                />
-              </AuFormRow>
-              <AuFormRow>
-                <Auk::Label id="name-subcase">{{t "name-subcase"}}</Auk::Label>
-                <Textarea
-                  aria-labelledby="name-subcase"
-                  rows="2"
-                  class="auk-textarea"
-                  @value={{mut this.shortTitle}}
-                />
-              </AuFormRow>
-              <AuFormRow>
-                <Auk::Label id="title-subcase">{{t "title-subcase"}}</Auk::Label>
-                <Textarea
-                  aria-labelledby="name-subcase"
-                  rows="4"
-                  class="auk-textarea"
-                  @value={{mut this.title}}
-                />
-              </AuFormRow>
-              <AuFormRow>
-                <Auk::Label>{{t "subcase-type-dropdown"}}</Auk::Label>
-                <Utils::ModelSelector
-                  @modelName="subcase-type"
-                  @searchField="label"
-                  @sortField="label"
-                  @displayField="label"
-                  @selected={{this.subcaseType}}
-                  @onChange={{this.selectSubcaseType}}
-                />
-              </AuFormRow>
-              <AuFormRow>
-                <Auk::Label>{{t "subcase-name"}}</Auk::Label>
-                <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex-gap--small form-input-width">
-                  {{#if (not this.isEditing)}}
-                    <Utils::ModelSelector
-                      class="auk-u-maximize-width"
-                      @modelName="shortcut"
-                      @searchField="label"
-                      @sortField="label"
-                      @filter={{this.filter}}
-                      @selected={{this.selectedShortcut}}
-                      @onChange={{this.selectSubcaseName}}
-                    as |model|>
-                      {{capitalize model.label}}
-                    </Utils::ModelSelector>
-                    <AuButton
-                      @skin="naked"
-                      @icon="pencil"
-                      @hideText={{true}}
-                      {{on "click" this.toggleIsEditing}}
-                    >
-                      {{t "edit"}}
-                    </AuButton>
-                  {{else}}
-                    <AuInput
-                      @width="block"
-                      @value={{this.subcaseName}}
-                      id="subcaseNameId"
-                    />
-                    <AuButton
-                      @skin="naked"
-                      @icon="x"
-                      @hideText={{true}}
-                      {{on "click" this.toggleIsEditing}}
-                    >
-                      {{t "cancel"}}
-                    </AuButton>
-                  {{/if}}
-                  </div>
-              </AuFormRow>
-            </div>
-          </Utils::LoadableContent>
-        </Auk::Panel::Body>
-      </Auk::Panel>
+            </Utils::LoadableContent>
+          </Auk::Panel::Body>
+        </Auk::Panel>
+      </div>
     </div>
   </div>
-  <AuToolbar 
+  <AuToolbar
     @reverse={{true}}
     @size="large"
     @border="top"
