--- a/app/styles/au/_au-base.scss
+++ b/app/styles/au/_au-base.scss
@@ -1,6 +1,23 @@
 /* Appuniversum base
    ========================================================================== */
 
+// SCSS variables (to override)
+
+$mq-breakpoints: (
+  xsmall: 300px,
+  small: 500px,
+  medium: 767px,
+  large: 1023px,
+  xlarge: 1600px,
+);
+
+// $au-layout-width: 767px;
+// $au-layout-width-small: 500px;
+// $au-layout-width-large: 1023px;
+$au-layout-breakpoint: large;
+
+$au-region-breakpoint: large;
+
 // Imports
 // sourced from '@appuniversum/ember-appuniversum' npm package
 
