--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -313,7 +313,7 @@
     @piece={{this.piece}}
     @signFlow={{this.signFlow}}
     @onCancel={{this.cancelEditPiece}}
-    @onSave={{toggle "isEditingPiece" this}}
+    @onSave={{queue (toggle "isEditingPiece" this) (perform this.loadPieceRelatedData)}}
   />
 {{/if}}
 
