--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -50,6 +50,7 @@
 @import 'custom-application/pdf-viewer';
 @import 'custom-application/uploaded-document';
 @import 'custom-application/form';
+@import 'custom-application/government-area';
 
 // AUK COMPONENTS
 @import 'auk-components'; // sourced from "au-kaleidos-css" npm package
